Finalizado CRUD users. Se corrigieron UserController y UserService para separar responsabilidades. Se crearon dos nuevas DTO para usuario.